istio/vote/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vote
  labels:
    environment: dev
    namespace-type: application
    istio-injection: enabled
