istio/vote/base/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: vote
spec:
  mtls:
    mode: STRICT
