istio/vote/base/redis-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: vote
  labels:
    environment: dev
spec:
  type: ExternalName
  externalName: redis.redis.svc.cluster.local
