istio/vote/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
    environment: dev
  name: vote-svc
  namespace: vote
spec:
  selector:
    app: vote
  sessionAffinity: ClientIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
