istio/vote/base/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vote-vs
  namespace: vote
spec:
  hosts:
  - vote.vote.svc.cluster.local

  http:
  - name: primary
    route:
    - destination:
        host: vote.vote.svc.cluster.local
        subset: stable
      weight: 100
