istio/vote/base/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-vote-namespace
  namespace: vote
spec:
  rules:
  - from:
    - source:
        namespaces:
        - vote
